<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movies_poster"
            android:foreground="@drawable/movie_image_gradient"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mask"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/textView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_x_large_margin"
            android:layout_marginTop="@dimen/movie_details_back_vertical_margin"
            android:alpha="0.5"
            android:drawablePadding="@dimen/movie_details_padding"
            android:fontFamily="@font/roboto"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/movie_details_small_text_size"
            app:drawableStartCompat="@drawable/ic_path"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/movie_details_small_margin"
            android:alpha="0.9"
            android:background="@drawable/ic_thirteen_rectangle"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="@dimen/movie_details_small_text_size"
            app:layout_constraintBottom_toTopOf="@+id/textView_name"
            app:layout_constraintStart_toStartOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/avengers_end_game"
            android:textColor="@color/heading"
            android:textSize="@dimen/movie_details_name_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_mask" />

        <TextView
            android:id="@+id/textView_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:fontFamily="@font/roboto_light"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/tag"
            android:textSize="@dimen/movie_details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/MyRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/star_on"
            android:rating="4"
            app:layout_constraintBottom_toBottomOf="@+id/textView_reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_reviews" />

        <TextView
            android:id="@+id/textView_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/movie_details_xx_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/_125_reviews"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/movie_details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/textView_tag" />

        <TextView
            android:id="@+id/textView_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_large_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/storyline"
            android:textColor="@color/heading"
            android:textSize="@dimen/movie_details_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_reviews" />

        <TextView
            android:id="@+id/textView_storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:alpha="0.75"
            android:fontFamily="@font/roboto_light"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/movie_details_storyline"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_storyline"
            app:lineHeight="@dimen/movie_details_line_height" />

        <TextView
            android:id="@+id/textView_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_large_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:height="@dimen/movie_detail_large_text_size"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/cast"
            android:textColor="@color/heading"
            android:textSize="@dimen/movie_details_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_storyline_text"
            app:lineHeight="@dimen/movie_details_large_line_height" />

        <ImageView
            android:id="@+id/imageView_cast1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_small_margin"
            android:contentDescription="@string/_1_cast"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imageView_cast2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_cast"
            app:srcCompat="@drawable/cast1" />

        <ImageView
            android:id="@+id/imageView_cast2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movie_details_small_margin"
            android:layout_marginTop="@dimen/movie_details_small_margin"
            android:contentDescription="@string/_2_cast"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imageView_cast3"
            app:layout_constraintStart_toEndOf="@+id/imageView_cast1"
            app:layout_constraintTop_toBottomOf="@+id/textView_cast"
            app:srcCompat="@drawable/cast2" />

        <ImageView
            android:id="@+id/imageView_cast3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movie_details_small_margin"
            android:layout_marginTop="@dimen/movie_details_small_margin"
            android:contentDescription="@string/_3_cast"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imageView_cast4"
            app:layout_constraintStart_toEndOf="@+id/imageView_cast2"
            app:layout_constraintTop_toBottomOf="@+id/textView_cast"
            app:srcCompat="@drawable/cast3" />

        <ImageView
            android:id="@+id/imageView_cast4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movie_details_small_margin"
            android:layout_marginTop="@dimen/movie_details_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:contentDescription="@string/_4_cast"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_cast3"
            app:layout_constraintTop_toBottomOf="@+id/textView_cast"
            app:srcCompat="@drawable/cast4" />

        <TextView
            android:id="@+id/textView_cast1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_details_x_small_margin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/cast"
            android:textSize="@dimen/movie_details_small_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView_cast1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView_cast1"
            app:layout_constraintTop_toBottomOf="@+id/imageView_cast1"
            app:layout_constraintVertical_bias="0.0"
            app:lineHeight="@dimen/movie_details_small_line_height" />

        <TextView
            android:id="@+id/textView_cast2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_details_x_small_margin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chris_evans"
            android:textColor="@color/cast"
            android:textSize="@dimen/movie_details_small_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView_cast2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView_cast2"
            app:layout_constraintTop_toBottomOf="@+id/imageView_cast2"
            app:layout_constraintVertical_bias="0.0"
            app:lineHeight="@dimen/movie_details_small_line_height" />

        <TextView
            android:id="@+id/textView_cast3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_details_x_small_margin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/cast"
            android:textSize="@dimen/movie_details_small_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageView_cast3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/imageView_cast3"
            app:layout_constraintTop_toBottomOf="@id/imageView_cast3"
            app:layout_constraintVertical_bias="0.0"
            app:lineHeight="@dimen/movie_details_small_line_height" />

        <TextView
            android:id="@+id/textView_cast4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_details_x_small_margin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/cast"
            android:textSize="@dimen/movie_details_small_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageView_cast4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/imageView_cast4"
            app:layout_constraintTop_toBottomOf="@+id/imageView_cast4"
            app:layout_constraintVertical_bias="0.0"
            app:lineHeight="@dimen/movie_details_small_line_height" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>