<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vh_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/movie_bg"
    tools:context=".MoviesListFragment">

    <!--    TODO-->
    <!--    <com.google.android.material.imageview.ShapeableImageView-->
    <ImageView
        android:id="@+id/iv_movie"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:layout_marginStart="@dimen/movies_xx_small_margin"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/movies_xx_small_margin"
        android:layout_marginEnd="@dimen/movies_xx_small_margin"
        android:foreground="@drawable/movie_image_gradient"
        android:outlineProvider="background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        tools:srcCompat="@drawable/fight_club_kinoposter" />

    <TextView
        android:id="@+id/tv_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/movies_x_small_margin"
        android:layout_marginTop="@dimen/movies_x_small_margin"
        android:background="@drawable/ic_thirteen_rectangle"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/movie_details_small_text_size"
        app:layout_constraintStart_toStartOf="@+id/iv_movie"
        app:layout_constraintTop_toTopOf="@+id/iv_movie"
        tools:text="@string/_13" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_marginTop="@dimen/movies_large_margin"
        android:layout_marginEnd="@dimen/movies_x_small_margin"
        android:contentDescription="@string/like"
        app:layout_constraintEnd_toEndOf="@+id/iv_movie"
        app:layout_constraintTop_toTopOf="@+id/iv_movie"
        tools:srcCompat="@drawable/ic_like" />

    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/movies_small_margin"
        android:layout_marginEnd="@dimen/movies_small_margin"
        android:layout_marginBottom="@dimen/movies_xx_small_margin"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_light"
        android:maxLines="1"
        android:textColor="@color/tag"
        android:textSize="@dimen/movies_small_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_reviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/action_adventure_drama" />

    <ru.zhek.androidacademyfundamentals2020.ui.custom.RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:progressBackgroundTint="@color/gray"
        android:progressDrawable="@drawable/custom_rating_bar"
        android:progressTint="@color/star_on"
        app:drawableHeight="@dimen/movies_star_height"
        app:drawableWidth="@dimen/movies_star_width"
        app:innerPadding="@dimen/movies_small_padding"
        app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
        app:layout_constraintStart_toStartOf="@+id/tv_genres"
        app:layout_constraintTop_toTopOf="@+id/tv_reviews"
        tools:rating="4" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/movies_x_small_margin"
        android:layout_marginEnd="@dimen/movies_small_margin"
        android:layout_marginBottom="@dimen/movies_small_margin"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_black"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="@dimen/movies_small_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        tools:text="@string/_125_reviews" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/movies_small_margin"
        android:layout_marginTop="@dimen/movies_small_margin"
        android:layout_marginEnd="@dimen/movies_small_margin"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_black"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/movies_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie"
        tools:text="Avengers: End Game" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/movies_small_margin"
        android:layout_marginTop="@dimen/movies_small_margin"
        android:layout_marginEnd="@dimen/movies_small_margin"
        android:layout_marginBottom="@dimen/movies_small_margin"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_black"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/duration"
        android:textSize="@dimen/movies_small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="@string/_137_min" />

</androidx.constraintlayout.widget.ConstraintLayout>