<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".movieDetails.MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_backposter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movies_poster"
            android:foreground="@drawable/movie_image_gradient"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/mask" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_x_large_margin"
            android:layout_marginTop="@dimen/movie_details_back_vertical_margin"
            android:alpha="0.5"
            android:drawablePadding="@dimen/movie_details_padding"
            android:fontFamily="@font/roboto"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/movie_details_small_text_size"
            app:drawableStartCompat="@drawable/ic_path"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/movie_details_small_margin"
            android:alpha="0.9"
            android:background="@drawable/ic_thirteen_rectangle"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/movie_details_small_text_size"
            app:layout_constraintBottom_toTopOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            tools:text="13+" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/heading"
            android:textSize="@dimen/movie_details_name_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/iv_backposter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_backposter"
            tools:text="Avengers: End Game" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/tag"
            android:textSize="@dimen/movie_details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="Action, Adventure, Fantasy" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/MyRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/star_on"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_reviews"
            tools:rating="4" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_small_margin"
            android:layout_marginTop="@dimen/movie_details_xx_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/movie_details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres"
            tools:text="125 Reviews" />

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_large_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/storyline"
            android:textColor="@color/heading"
            android:textSize="@dimen/movie_details_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />

        <TextView
            android:id="@+id/tv_storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:alpha="0.75"
            android:fontFamily="@font/roboto_light"
            android:paddingTop="@dimen/movie_details_large_padding"
            android:paddingBottom="@dimen/movie_details_large_padding"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline"
            app:lineHeight="@dimen/movie_details_line_height"
            tools:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thano\'s actions and restore balance to the universe." />

        <TextView
            android:id="@+id/tv_actor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_xx_large_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:height="@dimen/movie_detail_large_text_size"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/cast"
            android:textColor="@color/heading"
            android:textSize="@dimen/movie_details_text_size"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline_text"
            app:lineHeight="@dimen/movie_details_large_line_height" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_margin"
            android:layout_marginTop="@dimen/movie_details_small_margin"
            android:layout_marginEnd="@dimen/movie_details_margin"
            android:layout_marginBottom="@dimen/movie_details_small_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_actor"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/view_holder_actor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>